# eigen-gurobi

./: AUTHORS  CMakeLists.txt  FindEigen.cmake  FindGUROBI.cmake  README.md
src/: CMakeLists.txt  Gurobi.cpp  Gurobi.h
tests/: CMakeLists.txt  QPTest.cpp
